--- a/class_/class_/class_.vcxproj.filters
+++ b/class_/class_/class_.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="class_2026_01_09.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="class_2026_01_10.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
