--- a/class_/class_/class_.vcxproj.filters
+++ b/class_/class_/class_.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="class_2026_01_12.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="class_2026_01_16.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
